# InvoiceFlow

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  railway.json  railway.toml  test_upload.py
backend/: Dockerfile  azure-setup-quick.md  env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/scripts/: generate_realistic_test_pdfs.py  generate_test_pdfs.py
backend/src/: __init__.py  main.py
backend/src/api/: documents.py  extracted_data.py  matching.py  reports.py  workspaces.py
backend/src/core/: config.py  database.py
backend/src/models/: __init__.py  document.py  extracted_data.py  matching.py  workspace.py
backend/src/services/: document_processor.py  form_recognizer.py  llm_extractor.py  matching.py  pdf_utils.py  storage.py
backend/src/services/extraction/: __init__.py  base.py  currency_extractor.py  tax_extractor.py
frontend/: .env.local.production  Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/workspaces/: page.tsx
frontend/src/components/: collapsible-section.tsx  comparison-view.tsx  document-list.tsx  document-table.tsx  document-upload.tsx  matching-results.tsx  pdf-viewer.tsx  workspace-selector.tsx
private/: azure-setup-guide.md  document-matching-reconciliation.md  logical-assessment.md  roadmap.md  tech-stack-recommendation.md
